[tool.poetry]
name = "simple-atm-controller"
version = "0.1.0"
description = ""
authors = ["won12054 <won12504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
